# digital_filters

./: CMakeLists.txt  README.md  annotated.html  annotated_dup.js  average_8hpp.html  average_8hpp.js  average_8hpp__dep__incl.map  average_8hpp__dep__incl.md5  average_8hpp__incl.map  average_8hpp__incl.md5  average_8hpp_source.html  average_8hxx.html  average_8hxx.js  average_8hxx__dep__incl.map  average_8hxx__dep__incl.md5  average_8hxx_source.html  butterworth_8hpp.html  butterworth_8hpp.js  butterworth_8hpp__dep__incl.map  butterworth_8hpp__dep__incl.md5  butterworth_8hpp__incl.map  butterworth_8hpp__incl.md5  butterworth_8hpp_source.html  butterworth_8hxx.html  butterworth_8hxx.js  butterworth_8hxx__dep__incl.map  butterworth_8hxx__dep__incl.md5  butterworth_8hxx__incl.map  butterworth_8hxx__incl.md5  butterworth_8hxx_source.html  classdigital__filters_1_1Filter-members.html  classdigital__filters_1_1Filter.html  classdigital__filters_1_1Filter.js  classes.html  derivatives_8hpp.html  derivatives_8hpp_source.html  dir_000003_000004.html  dir_000006_000002.html  dir_031c4fc26031de218e3c67acfca35073.html  dir_031c4fc26031de218e3c67acfca35073.js  (+108 more)
.github/workflows/: cmake-build-doc.yaml
doc/: .gitignore  CMakeLists.txt  doxyfile.in
doc/extra/: main_page.md  namespaces.dox
include/digital_filters/: filter.hpp  filter.hxx  filters.hpp  utilities.hpp  utilities.hxx
include/digital_filters/filters_implementations/: average.hpp  average.hxx  butterworth.hpp  butterworth.hxx  exponential.hpp  exponential.hxx
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+18 more)
test/: CMakeLists.txt  test_butterworth.cpp  test_filter.cpp  test_filters.cpp  test_utilities.cpp
